--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 geopandas~=1.0.1
-numpy~=1.26.4
+numpy
 rasterio~=1.3.10
 rioxarray~=0.17.0
 shapely~=2.0.5
@@ -8,7 +8,7 @@ dask~=2024.7.0
 tqdm~=4.66.4
 setuptools~=71.0.3
 folium~=0.17.0
-matplotlib~=3.9.1
+matplotlib
 requests~=2.32.3
 fiona~=1.9.6
 geocube~=0.5.2
@@ -16,6 +16,6 @@ affine~=2.4.0
 pandas~=2.2.2
 packaging~=24.1
 scipy~=1.14.0
-h5py~=3.11.0
-beautifulsoup4~=4.12.3
+h5py
+beautifulsoup4
 pyproj~=3.6.1
