--- a/setup.cfg
+++ b/setup.cfg
@@ -2,9 +2,9 @@
 
 [metadata]
 name = gabelscience
-version = 0.4.0
+version = 0.6.0
 author = Kevin Gabelman
-author_email = kevtg1212@gmail.com
+author_email = kevin.gabelman@gabelscience.com
 description = Python package for performing spatial analysis
 long_description = file: README.md
 long_description_content_type = text/markdown
