--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
 geopandas~=1.0.1
-numpy
+numpy~=1.26.4
 rasterio~=1.3.10
 rioxarray~=0.17.0
 shapely~=2.0.5
@@ -8,14 +8,18 @@ dask~=2024.7.0
 tqdm~=4.66.4
 setuptools~=71.0.3
 folium~=0.17.0
-matplotlib
+matplotlib~=3.9.1
 requests~=2.32.3
-fiona~=1.10b2
+fiona~=1.9.6
 geocube~=0.5.2
 affine~=2.4.0
 pandas~=2.2.2
 packaging~=24.1
 scipy~=1.14.0
-h5py
-beautifulsoup4
+h5py~=3.11.0
+beautifulsoup4~=4.12.3
 pyproj~=3.6.1
+gdal~=3.9.2
+sparse~=0.15.4
+pyresample~=1.30.0
+distributed~=2024.7.1
