class nfhl downloader

--- a/pyvenv.cfg
+++ b/pyvenv.cfg
@@ -1,7 +1,6 @@
 home = C:\ProgramData\miniforge3
 implementation = CPython
-version_info = 3.10.12.final.0
-virtualenv = 20.16.7
+version_info = 3.12.7
 include-system-site-packages = false
 base-prefix = C:\ProgramData\miniforge3
 base-exec-prefix = C:\ProgramData\miniforge3
