--- a/setup.cfg
+++ b/setup.cfg
@@ -2,13 +2,13 @@
 
 [metadata]
 name = gabelscience
-version = 0.6.0
+version = 0.8.0
 author = Kevin Gabelman
 author_email = kevin.gabelman@gabelscience.com
 description = Python package for performing spatial analysis
 long_description = file: README.md
 long_description_content_type = text/markdown
-url = yourprojecturl.com
+url = https://github.com/t968rs/gabelscience
 classifiers =
     Programming Language :: Python :: 3
     Operating System :: OS Independent
