--- a/requirements.txt
+++ b/requirements.txt
@@ -1,25 +1,28 @@
+fiona~=1.10b2
+GDAL~=3.9.3
+geocube~=0.5.3
+h5py~=3.11.0
+matplotlib~=3.9.2
+rasterio~=1.4.2
+setuptools~=71.0.4
+tqdm~=4.66.5
+requests~=2.32.3
+folium~=0.18.0
 geopandas~=1.0.1
 numpy~=1.26.4
-rasterio~=1.3.10
-rioxarray~=0.17.0
-shapely~=2.0.5
 xarray~=2024.6.0
-dask~=2024.7.0
-tqdm~=4.66.4
-setuptools~=71.0.3
-folium~=0.17.0
-matplotlib~=3.9.1
-requests~=2.32.3
-fiona~=1.9.6
-geocube~=0.5.2
+shapely~=2.0.6
+dask~=2024.10.0
+rioxarray~=0.17.0
+psycopg2~=2.9.9
+psycopg2-binary~=2.9.9
+sqlalchemy~=2.0.36
+pandas~=2.2.3
+pyproj~=3.7.0
+spatialist~=0.14.0
+geoalchemy2~=0.15.2
 affine~=2.4.0
-pandas~=2.2.2
-packaging~=24.1
-scipy~=1.14.0
-h5py~=3.11.0
+yaml~=0.2.5
+pyyaml~=6.0.2
+pyresample~=1.31.0
 beautifulsoup4~=4.12.3
-pyproj~=3.6.1
-gdal~=3.9.2
-sparse~=0.15.4
-pyresample~=1.30.0
-distributed~=2024.7.1
